[gd_scene load_steps=10 format=3 uid="uid://b6rkj1tj515u8"]

[ext_resource type="Script" path="res://door/door.gd" id="1_lihjd"]
[ext_resource type="Material" uid="uid://lohyakfqnnwj" path="res://door/door_material.tres" id="2_sdmdy"]
[ext_resource type="Shader" path="res://door/door_lock.gdshader" id="2_vu4me"]
[ext_resource type="Texture2D" uid="uid://bhnfbfi2ltgw8" path="res://assets/vfx/Flare00.PNG" id="3_lkinq"]
[ext_resource type="AudioStream" uid="uid://c27ka1ibyjmqa" path="res://assets/audio/door_locked.wav" id="4_34brw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3lipd"]
size = Vector3(1.5, 2.3, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_rtfc1"]
material = ExtResource("2_sdmdy")
size = Vector3(1.5, 2.3, 0.1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aya1s"]
render_priority = 0
shader = ExtResource("2_vu4me")
shader_parameter/speed = 10.0
shader_parameter/hit = false
shader_parameter/hit_point = Vector2(0.5, 0.5)
shader_parameter/hit_time_ratio = 0.0
shader_parameter/color = Vector3(0, 0.3, 0.9)
shader_parameter/flare_texture = ExtResource("3_lkinq")

[sub_resource type="QuadMesh" id="QuadMesh_sb2a7"]
material = SubResource("ShaderMaterial_aya1s")
size = Vector2(1.5, 2.3)

[node name="Door" type="Area3D"]
script = ExtResource("1_lihjd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15, 0)
shape = SubResource("BoxShape3D_3lipd")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15, 0)
mesh = SubResource("BoxMesh_rtfc1")

[node name="Lock" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15, 0.051)
mesh = SubResource("QuadMesh_sb2a7")

[node name="LockTimer" type="Timer" parent="Lock"]
one_shot = true

[node name="LockSFX" type="AudioStreamPlayer3D" parent="Lock"]
stream = ExtResource("4_34brw")
volume_db = -10.0

[connection signal="timeout" from="Lock/LockTimer" to="." method="_on_lock_timer_timeout"]
